tests/fixtures/invalid/dict_pow_bool.py
# Cannot power Dict[str, int] and Bool
x: dict[str, int] = {"a": 1} ** True
